pegando url do Heroku da API do Back end

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <app-root></app-root>
 
 </body>
